--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Hello World, HNY"
-    />
-</LinearLayout>
+              android:orientation="vertical"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent">
 
+  <Button android:id="@+id/btn_snd_happy" style="@style/ActionButton"
+          android:text="@string/btn_snd_happy" />
+
+</LinearLayout>
