styles.xml: disable button text appearence settings for now

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -3,15 +3,15 @@
     <style name="ActionButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAppearance">@style/TextAppearance.ActionButton</item>
+        <!--<item name="android:textAppearance">@style/TextAppearance.ActionButton</item>-->
     </style>
-
+<!-- ToDo: Review when making the final graphical appearence
     <style name="TextAppearance" parent="android:TextAppearance">
     </style>
 
     <style name="TextAppearance.ActionButton">
         <item name="android:textStyle">italic</item>
     </style>
-
+-->
 </resources>
 
