--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,8 +3,17 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent">
+  <LinearLayout android:orientation="horizontal"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content">
+    <NumberPicker android:id="@+id/np_voices_happy"
+                  style="@style/NumberPicker" />
+    <NumberPicker android:id="@+id/np_voices_new"
+                  style="@style/NumberPicker" />
+    <NumberPicker android:id="@+id/np_voices_year"
+                  style="@style/NumberPicker" />
+  </LinearLayout>
 
   <Button android:id="@+id/btn_snd_happy" style="@style/ActionButton"
           android:text="@string/btn_snd_happy" />
-
 </LinearLayout>
