--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ActionButton">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <!--<item name="android:textAppearance">@style/TextAppearance.ActionButton</item>-->
-    </style>
+  <style name="NumberPicker">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+  </style>
+  <style name="ActionButton">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <!--<item name="android:textAppearance">@style/TextAppearance.ActionButton</item>-->
+  </style>
 <!-- ToDo: Review when making the final graphical appearence
     <style name="TextAppearance" parent="android:TextAppearance">
     </style>
