--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,12 +6,27 @@
   <LinearLayout android:orientation="horizontal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
-    <NumberPicker android:id="@+id/np_voices_happy"
-                  style="@style/NumberPicker" />
-    <NumberPicker android:id="@+id/np_voices_new"
-                  style="@style/NumberPicker" />
-    <NumberPicker android:id="@+id/np_voices_year"
-                  style="@style/NumberPicker" />
+    <LinearLayout android:orientation="vertical"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content">
+      <TextView android:text="@string/lbl_voices_happy" style="@style/wrap" />
+      <NumberPicker android:id="@+id/np_voices_happy"
+                    style="@style/wrap" />
+    </LinearLayout>
+    <LinearLayout android:orientation="vertical"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content">
+      <TextView android:text="@string/lbl_voices_new" style="@style/wrap" />
+      <NumberPicker android:id="@+id/np_voices_new"
+                    style="@style/wrap" />
+    </LinearLayout>
+    <LinearLayout android:orientation="vertical"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content">
+      <TextView android:text="@string/lbl_voices_year" style="@style/wrap" />
+      <NumberPicker android:id="@+id/np_voices_year"
+                    style="@style/wrap" />
+    </LinearLayout>
   </LinearLayout>
 
   <Button android:id="@+id/btn_snd_happy" style="@style/ActionButton"
