--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,23 +9,23 @@
     <LinearLayout android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
-      <TextView android:text="@string/lbl_voices_happy" style="@style/wrap" />
+      <TextView android:text="@string/lbl_voices_happy" style="@style/label" />
       <NumberPicker android:id="@+id/np_voices_happy"
-                    style="@style/wrap" />
+                    style="@style/NumberPicker" />
     </LinearLayout>
     <LinearLayout android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
-      <TextView android:text="@string/lbl_voices_new" style="@style/wrap" />
+      <TextView android:text="@string/lbl_voices_new" style="@style/label" />
       <NumberPicker android:id="@+id/np_voices_new"
-                    style="@style/wrap" />
+                    style="@style/NumberPicker" />
     </LinearLayout>
     <LinearLayout android:orientation="vertical"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
-      <TextView android:text="@string/lbl_voices_year" style="@style/wrap" />
+      <TextView android:text="@string/lbl_voices_year" style="@style/label" />
       <NumberPicker android:id="@+id/np_voices_year"
-                    style="@style/wrap" />
+                    style="@style/NumberPicker" />
     </LinearLayout>
   </LinearLayout>
 
