update button text with current state
Show START, STOP and Stopping... on the button.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -29,6 +29,5 @@
     </LinearLayout>
   </LinearLayout>
 
-  <Button android:id="@+id/btn_snd_happy" style="@style/ActionButton"
-          android:text="@string/btn_snd_happy" />
+  <Button android:id="@+id/btn_snd_happy" style="@style/ActionButton" />
 </LinearLayout>
