--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,9 +5,9 @@
     <item name="android:layout_height">fill_parent</item>
     <item name="android:gravity">center</item>
   </style>
-  <style name="NumberPicker">
-    <item name="android:layout_width">wrap_content</item>
-    <item name="android:layout_height">wrap_content</item>
+  <style name="PickerButton">
+    <item name="android:layout_width">50px</item>
+    <item name="android:layout_height">50px</item>
   </style>
   <style name="ActionButton">
     <item name="android:layout_width">wrap_content</item>
