--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -22,6 +22,11 @@
   <style name="Pick.Minus">
     <item name="android:src">@drawable/minus</item>
   </style>
+  <style name="Vibes">
+    <item name="android:src">@drawable/vibes</item>
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+  </style>
   <style name="Control">
     <item name="android:layout_width">wrap_content</item>
     <item name="android:layout_height">wrap_content</item>
