--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,53 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
-
-  <LinearLayout android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="5sp">
+                android:layout_height="fill_parent">
 
-    <LinearLayout android:orientation="vertical"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content">
-      <TextView android:text="@string/lbl_voices_happy" style="@style/Label" />
-      <ImageButton android:id="@+id/btn_inc_happy" style="@style/Pick.Plus" />
-      <TextView android:id="@+id/text_happy" style="@style/Value" />
-      <ImageButton android:id="@+id/btn_dec_happy" style="@style/Pick.Minus" />
-      <ImageButton android:id="@+id/btn_vibes_happy" style="@style/Vibes" />
+  <LinearLayout android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+    <LinearLayout android:orientation="horizontal"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="center"
+                  android:layout_marginTop="5sp">
+
+      <LinearLayout android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+        <TextView android:text="@string/lbl_voices_happy" style="@style/Label" />
+        <ImageButton android:id="@+id/btn_inc_happy" style="@style/Pick.Plus" />
+        <TextView android:id="@+id/text_happy" style="@style/Value" />
+        <ImageButton android:id="@+id/btn_dec_happy" style="@style/Pick.Minus" />
+        <ImageButton android:id="@+id/btn_vibes_happy" style="@style/Vibes" />
+      </LinearLayout>
+
+      <LinearLayout android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+        <TextView android:text="@string/lbl_voices_new" style="@style/Label" />
+        <ImageButton android:id="@+id/btn_inc_new" style="@style/Pick.Plus" />
+        <TextView android:id="@+id/text_new" style="@style/Value" />
+        <ImageButton android:id="@+id/btn_dec_new" style="@style/Pick.Minus" />
+        <ImageButton android:id="@+id/btn_vibes_new" style="@style/Vibes" />
+      </LinearLayout>
+
+      <LinearLayout android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+        <TextView android:text="@string/lbl_voices_year" style="@style/Label" />
+        <ImageButton android:id="@+id/btn_inc_year" style="@style/Pick.Plus" />
+        <TextView android:id="@+id/text_year" style="@style/Value" />
+        <ImageButton android:id="@+id/btn_dec_year" style="@style/Pick.Minus" />
+        <ImageButton android:id="@+id/btn_vibes_year" style="@style/Vibes" />
+      </LinearLayout>
+
     </LinearLayout>
 
-    <LinearLayout android:orientation="vertical"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content">
-      <TextView android:text="@string/lbl_voices_new" style="@style/Label" />
-      <ImageButton android:id="@+id/btn_inc_new" style="@style/Pick.Plus" />
-      <TextView android:id="@+id/text_new" style="@style/Value" />
-      <ImageButton android:id="@+id/btn_dec_new" style="@style/Pick.Minus" />
-      <ImageButton android:id="@+id/btn_vibes_new" style="@style/Vibes" />
-    </LinearLayout>
-
-    <LinearLayout android:orientation="vertical"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content">
-      <TextView android:text="@string/lbl_voices_year" style="@style/Label" />
-      <ImageButton android:id="@+id/btn_inc_year" style="@style/Pick.Plus" />
-      <TextView android:id="@+id/text_year" style="@style/Value" />
-      <ImageButton android:id="@+id/btn_dec_year" style="@style/Pick.Minus" />
-      <ImageButton android:id="@+id/btn_vibes_year" style="@style/Vibes" />
+    <LinearLayout android:orientation="horizontal"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="center"
+                  android:layout_marginTop="15sp">
+      <Button android:id="@+id/btn_control" style="@style/Control" />
     </LinearLayout>
 
   </LinearLayout>
 
-  <LinearLayout android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginTop="15sp">
-    <Button android:id="@+id/btn_control" style="@style/Control" />
-  </LinearLayout>
+  <RelativeLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_alignParentBottom="true">
+    <Button android:id="@+id/btn_info"
+            android:text="@string/info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true" />
+  </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
