--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -33,5 +33,26 @@
     <item name="android:gravity">center</item>
     <item name="android:textSize">30sp</item>
   </style>
+  <style name="Info">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+  </style>
+  <style name="Info.Title">
+    <item name="android:textSize">25sp</item>
+    <item name="android:layout_margin">10dp</item>
+  </style>
+  <style name="Info.About">
+    <item name="android:textSize">20sp</item>
+    <item name="android:layout_marginBottom">10dp</item>
+  </style>
+  <style name="Info.Legal">
+    <item name="android:textSize">10sp</item>
+  </style>
+  <style name="Close">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:textSize">15sp</item>
+    <item name="android:layout_marginTop">15dp</item>
+  </style>
 </resources>
 
